# embb

./: .gitignore  CMakeLists.txt
CMakeCommon/: SetCompilerFlags.cmake
base_c/src/: time.c
base_cpp/: CMakeLists.txt
base_cpp/include/embb/base/internal/guarded_pointers/: callback_instance.h  hazard_pointers.h  i_guarded_pointers.h
base_cpp/perf/include/embb/base/perf/: performance_monitor.h  timer.h
base_cpp/perf/include/embb/base/perf/internal/: env.h  timestamp_clock_posix.h  timestamp_clock_win32.h  timestamp_counter_posix.h
base_cpp/perf/src/: timestamp_counter_posix.cc
benchmark_cpp/: CMakeLists.txt
benchmark_cpp/include/embb/benchmark/: benchmark.h  benchmark_runner.h  call_args.h  latency_measurements.h  latency_report.h  performance_measures.h  report.h  scenario.h  unit.h
benchmark_cpp/include/embb/benchmark/fundamental/: bag_measurements.h  list_measurements.h  set_measurements.h
benchmark_cpp/include/embb/benchmark/internal/: .pool_benchmark-inl.h.swp  .set_benchmark-inl.h.swp  console.h  pool_benchmark-inl.h  producer_consumer_thread-inl.h  producer_consumer_thread.h  queue_benchmark-inl.h  self_test.h  set_benchmark-inl.h  stack_benchmark-inl.h  util.h
benchmark_cpp/include/embb/benchmark/pools/: pool_benchmark.h  pool_benchmark_report.h  pool_benchmark_runner.h  pool_latency_measurements.h
benchmark_cpp/include/embb/benchmark/queues/: queue_benchmark.h  queue_benchmark_report.h  queue_benchmark_runner.h  queue_latency_measurements.h
benchmark_cpp/include/embb/benchmark/scheduling/: scheduling_benchmark_report.h  scheduling_latency_measurements.h  work_stealing_benchmark.h  work_stealing_benchmark_runner.h
benchmark_cpp/include/embb/benchmark/sets/: set_benchmark.h  set_benchmark_report.h  set_benchmark_runner.h  set_latency_measurements.h
benchmark_cpp/include/embb/benchmark/stacks/: stack_benchmark.h  stack_benchmark_report.h  stack_benchmark_runner.h  stack_latency_measurements.h
benchmark_cpp/src/: call_args.cc  latency_report.cc  main.cc  pool_benchmark_report.cc  pool_benchmark_runner.cc  queue_benchmark_report.cc  queue_benchmark_runner.cc  report.cc  scheduling_benchmark_report.cc  self_test.cc  set_benchmark_report.cc  set_benchmark_runner.cc  stack_benchmark_report.cc  stack_benchmark_runner.cc  work_stealing_benchmark.cc  work_stealing_benchmark_runner.cc
containers_cpp/include/embb/containers/: indexed_object_pool.h  wait_free_compartment_value_pool.h  wait_free_phaseless_queue.h  wait_free_queue.h  wait_free_sim_stack.h  wait_free_sim_stack_tagged.h
containers_cpp/include/embb/containers/internal/: cache.h  flags.h  increment_iterator.h  indexed_object_pool-inl.h  lock_free_tree_value_pool-inl.h  returning_true_iterator.h  wait_free_array_value_pool-inl.h  wait_free_compartment_value_pool-inl.h
containers_cpp/include/embb/containers/primitives/: llx_scx.h
containers_cpp/test/: main.cc  queue_test-inl.h  queue_test.h
evaluation/R/: colors.R  latencies.R  main.R  startup.R  summaryExtras.R  theme.R  throughput.R  timeSeries.R  util.R
mtapi_network_c/test/: main.cc
